NEW IN WAF 1.8.22
-----------------
* Add -pthread to link jni programs on FreeBSD
* Add the rest of command flags in ut_exec #1754
* Fix invalid Doxygen patterns #1751
* Fix missing backslash for REG_PYTHON_DIR #1746

NEW IN WAF 1.8.21
-----------------
* Fix for extra lines in windows logs #1715
* Add commit() method to ConfigSet #1717
* Enable manifest node objects in java #1722
* Identify java tasks more accurately and add build order on non-jar tasks #1725
* Add PlatformToolset ver. to msvs proj template #1729
* Enable Colorgcc for other compilers #1732

NEW IN WAF 1.8.20
-----------------
* Detection SUN cc compiler version 5.0 #1697
* Initialize 'VALAFLAGS' with OS flags #1703
* Convert --perlbinary data to list #1705
* Cppcheck fixes #1708
* Boost module enhancements and fixes #1709
* Various cpplint enhancements #1711
* Workaround for unreadable home folders

NEW IN WAF 1.8.19
-----------------
* Fixed the Intel Fortran compiler detection on Windows systems #1681
* Fixed the detection of newer Sun compilers #1686
* Fixed the detection of NAG Fortran compilers #1684
* Fixed missing variable dependencies of the form ARCH_ST used in ${ARCH_ST:ARCH} expressions
* Added conf.check(..., comment='some text') to document configuration headers

NEW IN WAF 1.8.18
-----------------
* Fixed a regression in exec_cfg() introduced in 1fbac66 #1670
* Added a new option --clear-failed to unit test builds #1678
* Added support for scriptlet expressions of the form ${FOO:SRC[0].abspath()}
* Added define comments to configuration headers: conf.define(.., commment='')
* Added experimental Wix and Satellizer tools #1666
* Added backslash replacement to resx processing

NEW IN WAF 1.8.17
-----------------
* Added customizations that enable building whole projects from the build folder instead of the variant folder
* Added a project generator for Xcode 6 #1648
* Force scanner functions to run after task failures #1660
* Improved the Intel Fortran compiler detection #1655