@@ -4,6 +4,7 @@ NEW IN WAF 1.8.22
 * Add the rest of command flags in ut_exec #1754
 * Fix invalid Doxygen patterns #1751
 * Fix missing backslash for REG_PYTHON_DIR #1746
+* Restore configuration values with Configure.autoconfig='clobber' #1758
 
 NEW IN WAF 1.8.21
 -----------------
